--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -20,6 +20,16 @@
 	box-sizing: border-box;
 }
 
-.btn {
-	padding: 1em 2em;
+.btn { padding: 1em 4em; }
+
+.top-round::before {
+	content: '';
+	display: block;
+	position: absolute;
+	top: 0;
+	width: calc(var(--toolbar-height) * 1.5);
+	height: calc(var(--toolbar-height) * 1.5);
+	background-color: inherit;
+	transform: translate(0,-25%);
+	border-radius: 100%;
 }
