--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -16,7 +16,7 @@
 .form-field input {
 	padding: 1em;
 	width: 100%;
-	height: 60px;
+	height: 50px;
 	box-sizing: border-box;
 }
 
@@ -30,6 +30,37 @@
 	width: calc(var(--toolbar-height) * 1.5);
 	height: calc(var(--toolbar-height) * 1.5);
 	background-color: inherit;
-	transform: translate(0,-25%);
+	transform: translate(0,-20%);
 	border-radius: 100%;
+}
+
+[class*="profile-icon"] {
+	background-color: var(--color-primary);
+	border-radius: 100%;
+}
+
+.profile-icon {
+	width: 50px;
+	height: 50px;
+}
+
+.profile-icon-sm {
+	width: 30px;
+	height: px;
+}
+
+.profile-icon-lg {
+	width: 100px;
+	height: 100px;
+}
+
+.profile-icon-xl {
+	width: 150px;
+	height: 150px;
+}
+
+.dropdown-menu-item {
+	display: block;
+	width: 100%;
+	padding: 0.5rem;
 }
