feat: update profile

--- a/src/assets/css/_config.css
+++ b/src/assets/css/_config.css
@@ -2,7 +2,7 @@
 :root {
 	--color-black: #1C1C1C;
 	--color-white: #FFFFFF;
-	--color-gray: #AAAAAA;
+	--color-gray: #c2c2c2;
 	--color-background: #EFEFEF;
 	--color-primary: #336E8D;
 	--color-alert: #FA3E3E;
