feat: get + post messages

--- a/src/assets/css/_config.css
+++ b/src/assets/css/_config.css
@@ -3,6 +3,7 @@
 	--color-black: #1C1C1C;
 	--color-white: #FFFFFF;
 	--color-gray: #c2c2c2;
+	--color-dark-gray: #d5d5d5;
 	--color-background: #EFEFEF;
 	--color-primary: #336E8D;
 	--color-alert: #FA3E3E;
