--- a/src/assets/css/_global.css
+++ b/src/assets/css/_global.css
@@ -5,13 +5,33 @@
 	box-sizing: border-box;
 }
 
+
 html, body {
 	position: relative;
-	width: 100%;
-	height: 100%;
-	overflow: hidden;
+	width: 100vw;
+	height: 100vh;
 	background: var(--color-background);
-	color: var(--color-black)
+	color: var(--color-black);
+	/* background-color: var(--primary-bgcolor);
+	color: var(--primary-textcolor);
+	font-family: var(--font-family);
+	font-size: var(--base-font-size);
+	line-height: var(--base-line-height);
+	font-weight: var(--base-font-weight); */
+	overflow: hidden;
+}
+
+@media (max-height: 600px) {
+	html { overflow-y: auto; }
+}
+
+@media (max-width: 516px) {
+	html, body {
+		height: -moz-available;          /* WebKit-based browsers will ignore this. */
+		height: -webkit-fill-available;  /* Mozilla-based browsers will ignore this. */
+		height: fill-available;
+		min-height: 100vmax;
+	}
 }
 
 ol,
