--- a/src/assets/css/_config.css
+++ b/src/assets/css/_config.css
@@ -1,44 +1,53 @@
 
+/* 
+	* MOBILE
+*/
 :root {
-	--color-black: #1C1C1C;
-	--color-white: #FFFFFF;
-	--color-gray-001: #c2c2c2;
-	--color-gray-002: #d5d5d5;
-	--color-gray-003: #696969;
-	--color-gray-004: #444444;
-	--color-background: #EFEFEF;
-	--color-primary: #336E8D;
-	--color-alert: #FA3E3E;
+  /* COLORS
+  ----- */
+	--color-black: #1C1C1C; /* default black */
+	--color-white: #FFFFFF; /* default white */
+	--color-gray-001: #c2c2c2; /* gray shade 1 */
+	--color-gray-002: #d5d5d5; /* gray shade 2 */
+	--color-gray-003: #696969; /* gray shade 3 */
+	--color-gray-004: #444444; /* gray shade 4 */
+	--color-background: #EFEFEF; /* default background color */
+	--color-primary: #336E8D; /* primary brand color */
+	--color-alert: #FA3E3E; /* notification color */
 
-	/* 
-		* Typography 
-	*/
-	--font-size-base: 16px;
-	--font-size-h1: 1.875em;
-	--font-size-h2: 1.5em;
-	--font-size-h3: 1.275em;
-	--font-size-h4: 1.125em;
-	--font-size-h5: 1em;
-	--font-size-h6: 0.825em;
+  /* Typography
+  ----- */
+	--font-size-base: 16px; /* page root font size */
+	--font-size-h1: 1.875em; /* h1 font size */
+	--font-size-h2: 1.5em; /* h2 font size */
+	--font-size-h3: 1.275em; /* h3 font size */
+	--font-size-h4: 1.125em; /* h4 font size */
+	--font-size-h5: 1em; /* h5 font size */
+	--font-size-h6: 0.825em; /* h6 font size */
 
-	/* 
-		* Theme 
-	*/
-	--toolbar-height: 50px;
-	--auth-page-padding: 200px;
+  /* Theme
+  ----- */
+	--toolbar-height: 50px; /* top and bottom toolbar heights */
+	--auth-page-padding: 200px; /* auth form top padding */
 	/* button */
-	--btn-primary-bg: var(--color-primary);
-	--btn-primary-text: var(--color-white);
-	--btn-hover-bg: var(--color-gray-004);
-	--btn-hover-text: var(--color-white);
+	--btn-primary-bg: var(--color-primary); /* button default background color */
+	--btn-primary-text: var(--color-white); /* button default text color */
+	--btn-hover-bg: var(--color-gray-004); /* button hover background color */
+	--btn-hover-text: var(--color-white); /* button hover text color */
 	/* modal */
-	--modal-bg: var(--color-gray-001);
-	--modal-gradient: var(--color-primary);
+	--modal-bg: var(--color-gray-001); /* modal background color */
+	--modal-gradient: var(--color-primary); /* modal gradient color */
 }
-
+/* 
+	* TABLET AND DESKTOP
+*/
 @media (min-width: 769px) {
 	:root {
+    /* Typography
+    ----- */
 		--font-size-base: 22px;
+    /* Theme
+    ----- */
 		--auth-page-padding: 120px;
 	}
 }
